--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "start:prod": "node ./bin/www NODE_ENV=production",
-    "dev": "nodemon ./bin/www",
-    "knex": "knex"
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -15,7 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "helmet": "^3.23.0",
-    "knex": "^0.21.1",
+    "mongoose": "^5.9.18",
     "morgan": "~1.9.1",
     "mssql": "^6.2.0"
   },
